# blinc_canvas_kit

./: BACKLOG.md  Cargo.toml  README.md
src/: background.rs  geometry.rs  grid_pass.rs  hit.rs  input.rs  lib.rs  loading.rs  material.rs  math.rs  painter.rs  pan.rs  scene3d.rs  selection.rs  sketch.rs  snap.rs  spatial.rs  viewport.rs  zoom.rs
src/shaders/: grid.wgsl
