[package]
name = "blinc_canvas_kit"
version = "0.5.1"
edition = "2021"
license = "Apache-2.0"
description = "Canvas authoring toolkit: interactive scene graphs (pan, zoom, selection, grid), 3D scene kit, and p5.js-style immediate-mode sketching over Blinc's DrawContext"
repository = "https://github.com/project-blinc/blinc_canvas_kit"
readme = "README.md"
documentation = "https://docs.rs/blinc_canvas_kit"
rust-version = "1.75"
keywords = ["ui", "gui", "canvas", "editor", "node-graph"]
categories = ["gui", "game-development"]

# Standalone package — not a member of the Blinc workspace. Lives under
# `/packages/` which is gitignored and workspace-excluded. Mirrors the
# `blinc_gltf` / `blinc_skeleton` / `blinc_input` pattern: pinned `git`
# deps on the Blinc upstream that consumers can override via a
# workspace `[patch]` table when developing against a local Blinc
# checkout. Bump these revs in lockstep with the Blinc repo's `main`.

[lib]
crate-type = ["lib"]

[dependencies]
# Pinned `git` deps on the Blinc upstream. Cargo doesn't allow `path`
# alongside `git` in the same entry, so consumers wanting to develop
# this crate against a local Blinc checkout should add a `[patch]`
# table in their workspace `Cargo.toml`:
#
#     [patch."https://github.com/project-blinc/Blinc.git"]
#     blinc_core = { path = "crates/blinc_core" }
#     blinc_layout = { path = "crates/blinc_layout" }
#     blinc_gpu = { path = "crates/blinc_gpu" }
#
# The Blinc workspace itself does this in its root Cargo.toml.
blinc_core = { git = "https://github.com/project-blinc/Blinc.git", rev = "aa5ed9b8e949d40a0012612b5880e89934ef69de" }
blinc_layout = { git = "https://github.com/project-blinc/Blinc.git", rev = "aa5ed9b8e949d40a0012612b5880e89934ef69de" }
blinc_gpu = { git = "https://github.com/project-blinc/Blinc.git", rev = "aa5ed9b8e949d40a0012612b5880e89934ef69de" }

# Versions inlined (no workspace inheritance — this crate isn't a
# Blinc workspace member). Keep in sync with the Blinc workspace
# `Cargo.toml` to avoid version-drift between Blinc internals and
# consumers when both end up in the same dep graph.
wgpu = "=26.0.1"
bytemuck = { version = "1.14", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["png", "hdr"] }

# Cross-target monotonic clock. `std::time::Instant` panics on
# `wasm32-unknown-unknown`; `web_time::Instant` is a zero-cost re-export of
# `std::time::Instant` on native and wraps `performance.now()` on the web,
# so `sketch::Sketch` gets wall-clock `t`/`dt` on every target.
web-time = "1.1"

# Diagnostic logging from the `input` module's callback wiring +
# (when gamepad feature is on) gilrs polling errors.
tracing = "0.1"

# Optional gamepad support — used by the `input` module to expose
# polled gamepad state alongside the keyboard / mouse channel.
# Desktop uses gilrs; wasm uses the browser's Web Gamepad API via
# web-sys. Pure keyboard / mouse consumers don't pay for the HID
# stack unless they opt into the `gamepad` feature.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
gilrs = { version = "0.11", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", optional = true, features = [
    "Gamepad",
    "GamepadButton",
    "Navigator",
    "Window",
] }
js-sys = { version = "0.3", optional = true }
wasm-bindgen = { version = "0.2", optional = true }

[features]
default = []
# Enable the gamepad API on the absorbed `input::InputState`
# (gamepad_count, is_gamepad_button_down, gamepad_axis, ...). Pulls
# in gilrs on desktop and the Web Gamepad bindings on wasm.
gamepad = ["dep:gilrs", "dep:web-sys", "dep:js-sys", "dep:wasm-bindgen"]
